--- a/addon/blockpage.html
+++ b/addon/blockpage.html
@@ -2,14 +2,26 @@
 <html>
   <head>
     <title>Page was blocked</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>Page was blocked</h1>
+    <h1>Adultblacklist</h1>
+    <h2>Page was blocked</h2>
     <p>
       The page <span id="page">you were looking for</span> was blocked
       by the blacklist addon, as it belongs to the adult blacklist
       at <a href='http://dsi.ut-capitole.fr/blacklists/index_en.php'>dsi.ut-capitole.fr/blacklists</a>.
     </p>
+
+    <p class="giveback">
+      If this adult blacklist has improved your life, you could
+      support its continued development by
+      <a href="https://www.patreon.com/user?u=8253776">making a
+contribution</a>
+      or <a id="review" href="https://addons.mozilla.org/en-US/firefox/addon/adultblacklist">writing
+a review.</a>
+    </p>
+    <!-- text copied from LeechBlock -->
     <script src="blockpage.js"></script>
   </body>
 </html>
